@@ -58,6 +58,8 @@
 - added: CSS and JS supports a simple View Engine markup (config + resources + F.global)
 - added: `controller.split` alias to `controller.req.split`
 - added: nicer error response messages
+- added: `RESTBuilder.proxy(proxy)` for HTTP proxy
+- added: `U.request()` supports a new flag `proxy`, for example `proxy 127.0.0.1:8080`
 
 - updated: (IMPORTANT) NoSQL binary divides files to independent directories for 1000 files per directory
 - updated: `GROUP()` by adding a new argument `url_prefix`
